# Auth-by-FASTAPI

auth_service/: dockerfile  pyproject.toml
auth_service/app/: main.py
